ajouter une montre pour la decoration de la page d'acceuil

--- a/src/main/resources/homePage.css
+++ b/src/main/resources/homePage.css
@@ -97,3 +97,8 @@
     -fx-padding: 5px 10px;
     -fx-pref-width: 150px; /* Largeur par défaut */
 }
+#clockLabel {
+     -fx-font-size: 24px;
+     -fx-font-weight: bold;
+     -fx-text-fill: #ffffff;
+ }
