--- a/src/main/resources/homePage.fxml
+++ b/src/main/resources/homePage.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.geometry.Pos?>
@@ -14,6 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.FontWeight?>
 
+<?import javafx.scene.layout.Pane?>
 <AnchorPane xmlns="http://javafx.com/javafx/20" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HomePage"
             stylesheets="@/styles.css"
             style="-fx-background-color: linear-gradient(to bottom, #2c3e50, #3498db);">
@@ -27,6 +29,14 @@
                 <Image url="@images/logo.jpeg"/>
             </image>
         </ImageView>
+
+        <!-- Espace vide pour pousser l'horloge vers le milieu -->
+        <VBox VBox.vgrow="ALWAYS" alignment="CENTER">
+            <!-- Horloge murale -->
+            <StackPane alignment="CENTER">
+                <Pane fx:id="clockPane" prefWidth="150" prefHeight="150" style="-fx-background-color: transparent;" />
+            </StackPane>
+        </VBox>
 
         <!-- Bouton utilisateur -->
         <Button fx:id="userButton" text="Profil" styleClass="sidebar-button" style="-fx-font-size: 14px; -fx-text-fill: #ecf0f1;">
@@ -83,6 +93,7 @@
                 </graphic>
             </Button>
         </HBox>
+
         <!-- Liste des utilisateurs dans un GridPane -->
         <ScrollPane fx:id="userListScrollPane" style="-fx-background: transparent; -fx-border-color: transparent;" hbarPolicy="NEVER" vbarPolicy="AS_NEEDED" VBox.vgrow="ALWAYS">
             <GridPane fx:id="userCards" hgap="20" vgap="20" style="-fx-padding: 20px;" GridPane.hgrow="ALWAYS" />
