--- a/src/main/resources/AfficheReservation.fxml
+++ b/src/main/resources/AfficheReservation.fxml
@@ -47,7 +47,7 @@
                         onMouseEntered="#buttonHoverEffect" onMouseExited="#buttonExitEffect"/>
 
                 <Button text="📋 Liste des Réservations" onAction="#displayReservations"
-                        style="-fx-background-color: transparent; -fx-text-fill: #e67e22;
+                        style="-fx-background-color: transparent; -fx-text-fill: #a868a0;
                                -fx-font-size: 16px; -fx-border-radius: 10px; -fx-padding: 12px 20px;"
                         onMouseEntered="#buttonHoverEffect" onMouseExited="#buttonExitEffect"/>
             </children>
