--- a/src/main/resources/ModifierFournisseur.fxml
+++ b/src/main/resources/ModifierFournisseur.fxml
@@ -43,6 +43,14 @@
                               -fx-border-radius: 10px; -fx-padding: 10px;
                               -fx-border-color: white; -fx-text-fill: white;"
                        GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+            <Label text="📞 Téléphone :" textFill="white" GridPane.rowIndex="3" GridPane.columnIndex="0" />
+            <TextField fx:id="telephoneFournisseur" promptText="Numéro de téléphone"
+                       style="-fx-background-color: rgba(255, 255, 255, 0.3);
+                  -fx-border-radius: 10px; -fx-padding: 10px;
+                  -fx-border-color: white; -fx-text-fill: white;"
+                       GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+
+
         </GridPane>
 
         <!-- 🟢🔴 Boutons d'action -->
