--- a/src/main/resources/gestionFournisseur.fxml
+++ b/src/main/resources/gestionFournisseur.fxml
@@ -26,7 +26,7 @@
             <Label text="Gestion des Fournisseurs"
                    style="-fx-font-size: 20px; -fx-text-fill: white; -fx-font-weight: bold;"/>
             <Button text="🏠 Accueil" style="-fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 14px;" onAction="#goToAcceuil"/>
-            <Button text="➕ Ajouter Fournisseur" onAction="#goToGestionFournisseur" style="-fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 14px;"/>
+            <Button text="➕ Ajouter Fournisseur"  style="-fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 14px;"/>
             <Button text="📋 Liste des Fournisseurs"
                     style="-fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 14px;"
                     onAction="#goToPrincipaleFournisseur"/>
@@ -49,12 +49,16 @@
                   <Label text="🏷 Type :" textFill="white" GridPane.columnIndex="0" GridPane.rowIndex="2" />
                   <TextField fx:id="typeFournisseur" promptText="Type" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-                  <Label text="🆔 ID Fournisseur :" textFill="white" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-                  <TextField fx:id="idFournisseur" promptText="ID (Optionnel)" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Label text="📞 Téléphone :" textFill="white" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                  <TextField fx:id="telephoneFournisseur" promptText="Numéro de téléphone" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+
+                  <Label text="ID Fournisseur" textFill="white" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
+                  <TextField fx:id="idFournisseur" promptText="ID Fournisseur" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
                </children>
             </GridPane>
 
-            <Button text="✔ Ajouter le Fournisseur" onAction="#addFournisseur" style="-fx-background-color: #9b59b6; -fx-text-fill: white; -fx-font-size: 16px; -fx-padding: 10px;"/>
+            <Button text="✔ Ajouter le Fournisseur" onAction="#addFournisseur"
+                    style="-fx-background-color: #9b59b6; -fx-text-fill: white; -fx-font-size: 16px; -fx-padding: 10px;"/>
          </children>
       </VBox>
    </children>
