--- a/src/main/resources/Acceuil.fxml
+++ b/src/main/resources/Acceuil.fxml
@@ -7,6 +7,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.CategoryAxis?>
 <AnchorPane prefHeight="671.0" prefWidth="950.0"
             style="-fx-background-color: linear-gradient(to bottom, #030307, #131022);"
             xmlns="http://javafx.com/javafx/23.0.1"
@@ -87,6 +90,18 @@
         <VBox layoutX="250.0" layoutY="20.0" prefWidth="680.0"
               style="-fx-alignment: center; -fx-padding: 20px;">
             <children>
+                <BarChart fx:id="eventStatsChart"
+                          layoutX="270.0" layoutY="100.0"
+                          prefHeight="400.0" prefWidth="600.0"
+                          style="-fx-background-color: transparent;">
+                    <xAxis>
+                        <CategoryAxis fx:id="eventAxis" label="Événements"/>
+                    </xAxis>
+                    <yAxis>
+                        <NumberAxis fx:id="ticketCountAxis" label="Nombre de billets"/>
+                    </yAxis>
+                </BarChart>
+
                 <Label text="Bienvenue sur la plateforme"
                        style="-fx-font-size: 26px; -fx-text-fill: white; -fx-font-weight: bold;
                               -fx-effect: dropshadow(gaussian, rgba(255, 255, 255, 0.8), 10, 0, 2, 2);"/>
