ajout scrollpann pour laffichage dans touste les taches

--- a/src/main/resources/PrincipaleProduits.fxml
+++ b/src/main/resources/PrincipaleProduits.fxml
@@ -67,7 +67,8 @@
                                       -fx-background-radius: 10px;
                                       -fx-padding: 10px;
                                       -fx-border-color: white;
-                                      -fx-background-color: rgba(255, 255, 255, 0.3);"/>
+                                      -fx-background-color: rgba(255, 255, 255, 0.3);"
+                               onKeyReleased="#searchProduits"/>
                     <Button text="Rechercher"
                             style="-fx-background-color: #9b59b6;
                                    -fx-text-fill: white;
@@ -79,8 +80,13 @@
                 </HBox>
 
                 <!-- 📌 Zone d'affichage des produits sous forme de cartes -->
-                <FlowPane fx:id="produitCardContainer" prefHeight="500.0" prefWidth="700.0" hgap="15" vgap="15"
-                          style="-fx-padding: 15px;"/>
+                <ScrollPane fitToWidth="true" fitToHeight="true"
+                            style="-fx-background-color: transparent;">
+                    <content>
+                        <FlowPane fx:id="produitCardContainer" prefHeight="500.0" prefWidth="700.0" hgap="15" vgap="15"
+                                  style="-fx-padding: 15px;"/>
+                    </content>
+                </ScrollPane>
             </children>
         </VBox>
     </children>
