--- a/src/main/resources/Events.fxml
+++ b/src/main/resources/Events.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.effect.DropShadow?>
 
+<?import javafx.scene.control.ScrollPane?>
 <AnchorPane prefHeight="671.0" prefWidth="950.0" style="-fx-background-color: linear-gradient(to bottom, #030307, #131022);"
             xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="controller.EventsMainController">
@@ -77,20 +78,16 @@
                 </HBox>
 
                 <!-- Zone d'affichage des événements sous forme de cartes -->
-                <FlowPane fx:id="eventCardContainer" prefHeight="500.0" prefWidth="700.0" hgap="15" vgap="15"
-                          style="-fx-padding: 10px;"/>
+                <!-- 🌟 Zone d'affichage des événements sous forme de cartes avec ScrollPane -->
+                <ScrollPane fitToWidth="true" fitToHeight="true" hbarPolicy="AS_NEEDED" vbarPolicy="AS_NEEDED"
+                            style="-fx-padding: 10px;">
+                    <FlowPane fx:id="eventCardContainer" prefHeight="500.0" prefWidth="700.0" hgap="15" vgap="15"
+                              style="-fx-padding: 10px;"/>
+                </ScrollPane>
             </children>
         </VBox>
 
         <!-- 🌟 Boutons d'action -->
-        <HBox layoutX="250.0" layoutY="595.0" spacing="10">
-            <Button onAction="#displayEvents" text="✔ Afficher Événements"
-                    style="-fx-background-color: #9b59b6;
-                           -fx-text-fill: white;
-                           -fx-font-size: 16px;
-                           -fx-font-weight: bold;
-                           -fx-border-radius: 12px;
-                           -fx-padding: 10px;"/>
-        </HBox>
+
     </children>
 </AnchorPane>
